OPENJPA-2666 prepare for Java9
* remove ianal-maven-plugin This plugin is unmaintained and we are covered with RAT already.
* remove MaxPermSize as this will blow up with Java9. People should set JAVA_OPTS and MAVEN_OPTS instead.


git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@1761526 13f79535-47bb-0310-9956-ffa450edef68